# MuppetsServer

./: .dockerignore  .gitignore  .offline-version  Dockerfile  README.md  compile.txt  config.py  docker-compose.yml  main.py  pyproject.toml  requirements.txt  zewmsm.db
MuppetsServer/: __init__.py  auth_app.py  muppets_server.py
MuppetsServer/routers/: auth.py  baking_actions.py  breeding_actions.py  egg_actions.py  island_actions.py  misc_actions.py  monster_actions.py  player_actions.py  static_data.py  structure_actions.py
MuppetsServer/tools/: MSMLocalization.py  player_island_factory.py  updater.py  utils.py
ZewSFS/: Exceptions.py  Utils.py  __init__.py
ZewSFS/Client/: Client.py  __init__.py
ZewSFS/Server/: Router.py  Server.py  ServerClient.py  __init__.py
ZewSFS/Types/: BaseType.py  Bool.py  BoolArray.py  Byte.py  ByteArray.py  Double.py  DoubleArray.py  Float.py  FloatArray.py  Int.py  IntArray.py  Long.py  LongArray.py  Null.py  SFSArray.py  SFSObject.py  Short.py  ShortArray.py  UtfString.py  UtfStringArray.py  __init__.py
content/: localization_patch.json
content/base_game_data/: backdrop_data.json  breeding_data.json  island_data.json  level_data.json  lighting_data.json  monster_data.json  player_data.json  quest_data.json  store_data.json  structure_data.json
database/: __init__.py  backdrop.py  base_adapter.py  breeding.py  db_classes.py  island.py  level.py  light.py  monster.py  player.py  structure.py
